<resources>
    <string name="app_name">Fitmo</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="section_weight">WEIGHT</string>
    <string name="section_stats">STATS</string>
    <string name="section_chart">CHART</string>
    <string name="section_analysis">ANALYSIS</string>
    <string name="action_backup_restore">Backup/Restore</string>
    <string name="action_export">Export</string>
    <string name="header_progress">Progress</string>
    <string name="header_statistics">Statistics</string>
    <string name="header_bodydata">Body Data</string>
    <string name="header_analysis">Analysis</string>
    <string name="text_male">Male</string>
    <string name="text_female">Female</string>
    <string name="dialog_gender_title">Select Gender</string>
    <string name="dialog_gender_message">Please select your gender.</string>
    <string name="pick_gender">Pick your gender</string>
    <string name="dialog_weight_title">Please enter your weight.</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="dialog_height_title">Please enter your height.</string>
    <string name="dialog_age_title">Please select your age.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="charts_weight_title">Weight</string>
    <string name="weight">Weight</string>
    <string name="date">Date</string>
    <string name="height">Height</string>
    <string name="text_checkbox1">Exercise</string>
    <string name="text_checkbox2">Overate, Drank</string>
    <string name="notes">Notes</string>
    <string name="dialog_addrecord_title">Input Weight</string>
    <string name="dialog_pcikdate_title">Pick the date</string>
    <string name="error_null_weight">Please enter a weight.</string>
    <string name="pref_showdialogonstart">Show input dialog</string>
    <string name="pref_showdialogonstart_summ">Show input dialog on startup</string>
    <string name="pref_category_basic">Basic</string>
    <string name="not_available_yet">Not available yet! (Still under dev)</string>
    <string name="pref_activity">Settings</string>
    <string name="pref_category_data">Data</string>
    <string name="pref_clear_table">Delete local table</string>
    <string name="prefs_confirm_clear_table">Reset the table?</string>
    <string name="action_about">About</string>
    <string name="fitmo">fitmo</string>
    <string name="file_selector">File Selector</string>
    <string name="backup_restore"><![CDATA[Backup & Restore]]></string>
    <string name="backup_database">Backup</string>
    <string name="restore">Restore</string>
    <string name="action_import">Import</string>
</resources>
